// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{95973DCC0000000000000000}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQDOfZ8Jsy4r_DZZctlZ94mzdXZDq0JSOTdR27f4E4JuCE2l",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 11482n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{D37FB8210000000000000000}",
          "type": "cell",
        },
        "bounce": true,
        "from": "kQDOfZ8Jsy4r_DZZctlZ94mzdXZDq0JSOTdR27f4E4JuCE2l",
        "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
        "type": "internal",
        "value": 9987322000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "message": {
      "body": {
        "cell": "x{D779C4ED00000000000000000000000000000000000000000000000000000000000000007FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFECC2_}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQDOfZ8Jsy4r_DZZctlZ94mzdXZDq0JSOTdR27f4E4JuCE2l",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 7401n,
    "type": "processed",
  },
]
`;
